kubernetes/main/apps/home/opengist/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: opengist
  namespace: home
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: opengist
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-networking
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
